fix: style scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,28 @@ body {
     font-style: normal;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(197, 127, 127); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #fb2271; 
+}
+
 .edit-button{
     border-radius:5px;
     background-color: rgb(81, 164, 81);
